# nextVersion

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleanup_tests.sh  generate_bash_release.sh  prompt.txt  run_tests.sh
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: actionlint.yml  auto-release-notes.yml  clang-tidy.yml  codeql.yml  comprehensive-test.yml  cross-platform.yml  debug-build-test.yml  dependabot-auto-merge.yml  dependency-check.yml  memory-sanitizer.yml  performance-benchmark.yml  shellcheck.yml  tag-cleanup.yml  test.yml  version-bump.yml
bash-tests/: run_bash_tests.sh  test_helper.sh
bash-tests/cli-tests/: run_all_cli_tests.sh  test_cli_options_analyzer.sh  test_file_change_analyzer.sh  test_semantic_version_analyzer.sh  test_semantic_version_analyzer_cli.sh  test_tag_manager.sh  test_version_calculator.sh
bash-tests/core-tests/: run_all_core_tests.sh  run_loc_delta_tests.sh  test-modular-components.sh  test_bump_version.sh  test_bump_version_loc_delta.sh  test_compare_analyzers.sh  test_loc_delta_system.sh  test_loc_delta_system_comprehensive.sh  test_pure_mathematical_bonus.sh  test_realistic_repositories.sh  test_semantic_analyzer_realistic_repos.sh  test_semantic_version_analyzer.sh  test_semantic_version_analyzer_comprehensive.sh  test_semantic_version_analyzer_fixes.sh  test_semantic_version_analyzer_simple.sh  test_version_calculation.sh  test_version_logic.sh  test_versioning_rules.sh  test_versioning_system_integration.sh
bash-tests/debug-tests/: run_all_debug_tests.sh  test_cli_detection.sh  test_debug_logging.sh  test_debug_markers.sh
bash-tests/edge-case-tests/: run_all_edge_case_tests.sh  test_breaking_case_detection.sh  test_cli_detection_fix.sh  test_env_normalization.sh  test_extract.sh  test_fixes.sh  test_header_removal.sh  test_minimal_repo_test_mode.sh  test_nul_safety.sh  test_rename_handling.sh  test_whitespace_ignore.sh
bash-tests/ere-tests/: run_all_ere_tests.sh  test_ere_fix.sh  test_run_test_framework.sh
bash-tests/file-handling-tests/: run_all_file_handling_tests.sh  test_file_parsing.sh  test_file_reading.sh
bash-tests/fixture-tests/: run_all_fixture_tests.sh  test_fixture_content.sh  test_fixture_validation.sh
bash-tests/utility-tests/: run_all_utility_tests.sh  test_classify_consolidated.sh  test_classify_inline2.sh  test_classify_simple.sh  test_func.sh  test_func2.sh  test_git_commit_counting.sh
comparator/: nv-common.sh  nv-compare.sh  nv-generators.sh  nv-readme.md  nv-repo-gen.sh  nv-suite.sh  run_comparator_tests.sh  run_tests.sh
comparator/full-generators/: generate_cpp.sh  generate_cpp_headers.sh
comparator/generators/: add_chaotic_header.sh  add_concepts_unit.sh  add_cpp_noise_unit.sh  add_deadcode_garden.sh  add_feature_file_once.sh  add_feature_files_bulk.sh  add_filesystem_unit.sh  add_header_only_lib.sh  add_macro_maze.sh  add_optional_variant_unit.sh  add_perf_code.sh  add_random_namespace_header.sh  add_ranges_unit.sh  add_security_fix.sh  add_template_stress.sh  add_test.sh  add_threading_unit.sh  breaking_api_change.sh  write_cmake_skel.sh  write_cpp_main_min.sh
comparator/modules/: add_concepts_unit.sh  add_cpp_noise_unit.sh  add_header_only_lib.sh  add_macro_maze.sh  add_optional_variant_unit.sh  add_perf_code.sh  add_random_namespace_header.sh  add_ranges_unit.sh  add_template_stress.sh  write_cmake_header_only_skel.sh  write_cmake_skel.sh  write_cpp_main_min.sh
comparator/tests/: test_compare_analyzers.sh
cpp-tests/: EXTENDED_TESTING_COVERAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  run_comprehensive_tests.sh  run_cpp_tests.sh  test_helpers.h
cpp-tests/analyzer-tests/: run_all_analyzer_tests.sh  test_analyzers_comprehensive.cpp  test_helpers.h  test_output_formatter_comprehensive.cpp  test_output_json.cpp  test_suggestion_engine.cpp
cpp-tests/cli-tests/: run_all_cli_tests.sh  test_cli_analyzer_breaking.cpp  test_cli_comprehensive.cpp  test_config_loader.cpp
cpp-tests/core-tests/: run_all_core_tests.sh  test_bonus_calculator_comprehensive.cpp  test_semver.cpp  test_semver_comprehensive.cpp  test_version_math.cpp  test_version_math_comprehensive.cpp  test_version_reader_and_cli_parse.cpp
cpp-tests/utility-tests/: run_all_utility_tests.sh  test_basic.cpp  test_git_helpers_comprehensive.cpp  test_git_stats.cpp
dev-bin/: cli-options-analyzer.sh  file-change-analyzer.sh  generate-ci-gpg-key.sh  git-operations.sh  keyword-analyzer.sh  mathematical-version-bump.sh  ref-resolver.sh  security-keyword-analyzer.sh  semantic-version-analyzer.sh  tag-manager.sh  version-calculator-loc.sh  version-calculator.sh  version-config-loader.sh  version-utils.sh  version-validator.sh
dev-bin/nv-fuzz/: nv-common.sh  nv-compare.sh  nv-generators.sh  nv-readme.md  nv-repo-gen.sh  nv-suite.sh
doc/: BUMP_VERSION_MODULAR_ARCHITECTURE.md  CI_CD_GUIDE.md  LOC_DELTA_SYSTEM.md  RELEASE_WORKFLOW.md  SEMANTIC_ANALYZER_MODULAR_ARCHITECTURE.md  TAG_MANAGEMENT.md  VERSIONING.md  VERSIONING_ALGORITHM.md
include/: test.h
include/next_version/: analyzers.h  bonus_calculator.h  cli.h  defaults.h  git_helpers.h  git_ops.h  output_formatter.h  semver.h  suggestion_engine.h  types.h  util.h  version_reader.h
release-notes/: README.md  v1.0.0.md
src/: analyzers.cpp  bonus_calculator.cpp  cli.cpp  defaults.cpp  git_helpers.cpp  git_ops.cpp  lib_placeholder.cpp  main.cpp  output_formatter.cpp  semver.cpp  simple_cli_test.c  suggestion_engine.cpp  test_getopt.c  version_reader.cpp
test/: run_unit_tests.sh  test_basic.cpp  test_cli_analyzer_breaking.cpp  test_config_loader.cpp  test_git_stats.cpp  test_output_json.cpp  test_suggestion_engine.cpp  test_version_reader_and_cli_parse.cpp
test-data/: test_header.h
test-data/cli/: simple_cli_test.c
test-data/internal/: header.hh
test-workflows/: run_loc_delta_tests.sh  run_workflow_tests.sh  test-modular-components.sh  test_helper.sh  test_semantic_version_analyzer_comprehensive.sh
test-workflows/cli-tests/: test_cli_options_analyzer.sh  test_file_change_analyzer.sh  (+3 more)
(+56 files in other folders)
